--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,10 @@
 .DS_Store
 .prettierignore
 
-tailwind.config.js
+node_modules/
+output.css
+
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
